@@ -1,9 +1,0 @@
-{
-  "alias": "cached",
-  "automation_alias": "automation",
-  "automation_uid": "bbeb15d8f0a944a4",
-  "tags": [
-    "automation"
-  ],
-  "uid": "541d6f712a6b464e"
-}
